<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_wallet_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/steemit_username_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steem_username_lbl" />

    <EditText
        android:id="@+id/steemit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_get_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_balance_btn_lbl" />

    <TextView
        android:id="@+id/actifit_balance_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/afit_token_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/actifit_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="" />

    <TextView
        android:id="@+id/actifit_transactions_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actifit_transactions_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/actifit_transactions_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actifit_transactions_error"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"/>

    <ListView
        android:id="@+id/actifit_transactions"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:dividerHeight="0.1dp"
        android:divider="#0000CC"
        />


</LinearLayout>