<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:gravity="start"
            android:textColor="@color/actifitRed"
            android:textSize="20sp" />

        <TextView android:id="@+id/user_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/actifitRed"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:srcCompat="@drawable/actifit_logo"
        android:contentDescription="@string/actifit_logo_desc"/>

    <TextView
        android:id="@+id/current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/step_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/btn_post_steemit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_to_steem_btn_txt" />

    <Button
        android:id="@+id/btn_snap_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snap_picture_btn_txt" />


    <Button
        android:id="@+id/btn_view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_history_btn_txt" />

    <Button
        android:id="@+id/btn_view_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_leaderboard_btn_txt" />

    <Button
        android:id="@+id/btn_view_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_wallet_btn_txt" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_txt" />

    </LinearLayout>

</LinearLayout>
